--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,4 +22,6 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -X -B package --file pom.xml
+      run: java -version
+      #run: mvn -X -B package --file pom.xml
+    
